Terraform/modules/ec2/main.tf
resource "aws_instance" "web" {
  for_each = toset(var.counts)
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name
  subnet_id     = var.subnet_id
  vpc_security_group_ids = [aws_security_group.web.id]

  associate_public_ip_address = true  # Ensure this is set to get a public IP

  tags = {
    Name = each.value
  }
}


resource "aws_security_group" "web" {
  vpc_id = var.vpc_id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "public_ips" {
  value = { for key, instance in aws_instance.web : key => instance.public_ip }
}
